--- a/https/https.yaml
+++ b/https/https.yaml
@@ -31,9 +31,9 @@ hub:
   revisionHistoryLimit:
   config:
     GitHubOAuthenticator:
-      client_id:
-      client_secret:
-      oauth_callback_url: https://jh.dioxide.id.lv/hub/oauth_callback
+      client_id: 6e0a0051d0827260abb2
+      client_secret: e5b3ad2959ac14e5053781e4d7b07f56379fb0ff
+      oauth_callback_url: https://${host}/hub/oauth_callback
     JupyterHub:
       admin_access: true
       authenticator_class: github
@@ -321,7 +321,7 @@ proxy:
       key: tls.key
       crt: tls.crt
     hosts:
-      - jh.dioxide.id.lv
+      - "${host}"
 
 # singleuser relates to the configuration of KubeSpawner which runs in the hub
 # pod, and its spawning of user pods such as jupyter-myusername.
