--- a/http/http.yaml
+++ b/http/http.yaml
@@ -31,8 +31,8 @@ hub:
   revisionHistoryLimit:
   config:
     GitHubOAuthenticator:
-      client_id:
-      client_secret:
+      client_id: ${git_id}
+      client_secret: ${git_secret}
       oauth_callback_url: http://${host}/hub/oauth_callback
     JupyterHub:
       admin_access: true
