new build for ICP bootcamp with https and JH image edits

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ https/.terraform/
 https/cert/
 
 http/.terraform.lock.hcl
+http/v.yaml
 https/.terraform.lock.hcl
 http/terraform.tfstate
 https/terraform.tfstate
